Bug 107622 - Cannot drag-resize table borders for tables which have left side shifted, when cursor is outside such tables
Summary: Cannot drag-resize table borders for tables which have left side shifted, whe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-04 11:57 UTC by Mike Kaganski
Modified: 2017-05-04 14:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test document for drag table border issue (1.91 KB, application/vnd.oasis.opendocument.text)
2017-05-04 11:57 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-05-04 11:57:28 UTC
Created attachment 133065 [details]
Test document for drag table border issue

With ordinary tables, it's possible to resize table's left/right borders with mouse when cursor is outside the table: hover the mouse over the border, notice the pointer changes shape to "resize", press left button and drag.

However, when a table has its left side shifted (not aligned to left border of page body), and cursor is outside such table, then the press-and-drag fails, despite mouse pointer indicates that resize is possible.

The attached test file allows to test this. If cursor blinks on any empty line outside tables, then it's impossible to resize left or right border of top table with mouse (on drag attempt, cursor simply jumps into the table, instead of starting drag), but possible to resize the lower table.
Comment 1 Mike Kaganski 2017-05-04 12:02:38 UTC
A patch is submitted for review: https://gerrit.libreoffice.org/37234
Comment 2 Commit Notification 2017-05-04 14:21:21 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=088ce8d2df78dd60724d1be0feb9f02bbcd043a4

tdf#107622: also update nNullVirOff when changing nNullOff

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.