tdf#107622: also update nNullVirOff when changing nNullOff

Change-Id: Iad867d6130c263d7bbfd7caf5c1805f13325aedb