svtools/source/control/ruler.cxx
@@ -2495,6 +2495,7 @@ void Ruler::SetNullOffset( long nPos )
 {
     if ( mpData->nNullOff != nPos )
     {
+        mpData->nNullVirOff += nPos - mpData->nNullOff;
         mpData->nNullOff = nPos;
         ImplUpdate();
     }
